<?xml version="1.0" encoding="utf-8"?>
<!--
UsbDebugging - Deny USB debugging on new computers
Copyright (C) 2019  Tommy Alex  <iptux7@gmail.com>

This program is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

This program is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<PreferenceCategory
		android:title="@string/pref_title_usb_debugging"
		>
		<SwitchPreference
			android:title="@string/pref_title_deny_usb_debugging"
			android:summary="@string/pref_summery_deny_usb_debugging"
			android:key="@string/pref_deny_usb_debugging"
			android:defaultValue="true"
			/>
	</PreferenceCategory>
	<PreferenceCategory
		android:title="@string/pref_title_about"
		>
		<Preference
			android:title="@string/app_name"
			android:key="version_name"
			/>
		<Preference
			android:title="@string/pref_title_url"
			android:summary="@string/text_url"
			>
			<intent
				android:action="android.intent.action.VIEW"
				android:data="@string/text_url"
				/>
		</Preference>
		<Preference
			android:title="@string/pref_title_author"
			android:summary="@string/text_author"
			/>
		<Preference
			android:title="@string/pref_title_email"
			android:summary="@string/text_email"
			>
			<intent
				android:action="android.intent.action.VIEW"
				android:data="@string/text_mailto"
				/>
		</Preference>
	</PreferenceCategory>
</PreferenceScreen>
